--- a/AuthorizationAuthentication/AuthorizationAuthentication/AuthorizationAuthentication.csproj
+++ b/AuthorizationAuthentication/AuthorizationAuthentication/AuthorizationAuthentication.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.9" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
   </ItemGroup>
 
 </Project>
